--- a/views/admin/frontadmin/add-new-document.ejs
+++ b/views/admin/frontadmin/add-new-document.ejs
@@ -3,12 +3,12 @@
   <div class="heading-row mb-20">
     <div class="row align-item-center">
        <div class="col-lg-6">
-          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-home"></i></span> Terms & Conditions </h3>
+          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-file-document"></i></span> Add New Document </h3>
        </div>
         <div class="col-lg-6">
          <div class="text-right">
            <div>
-             <a href="main-dashboard.ejs" class="btn btn-common bg-gradient-primary">Go Back</a>
+             <a href="/upload-doc-list" class="btn btn-common bg-gradient-primary">Go Back</a>
            </div>
          </div>
        </div>
@@ -23,36 +23,44 @@
                  <div>
                    <div class="profile-form mt-20">
                       <div class="row">
+                       
                         <div class="col-md-8">
                             <div class="row">
+                            
                               <div class="col-md-12">
                                  <div class="form-group">
-                                    <label>Tittle</label>
+                                    <label>Document Name</label>
                                     <input type="text" class="form-control">
                                   </div>
                               </div>
-                            </div>
-                            <div class="row">
-                              <div class="col-md-12">
-                                  <div class="form-group">
-                                    <label>Content</label>
-                                    <textarea class="form-control" name="editor1"></textarea>
+
+                               <div class="col-md-12">
+                                 <div class="form-group">
+                                  <label>File upload</label>
+                                  <input type="file" name="img[]" class="file-upload-default">
+                                  <div class="input-group col-xs-12">
+                                    <input type="text" class="form-control file-upload-info" disabled="" placeholder="Upload Image"
+                                    >
+                                    <span class="input-group-append">
+                                      <button class="file-upload-browse btn btn-gradient-primary" type="button">Upload</button>
+                                    </span>
                                   </div>
+                                </div>
                               </div>
+
                             </div>
+                           
                             
                               
                         </div>
-                        <div class="col-md-4">
-                         
-                        </div>
+                       
                       </div>
                     
                       
                      
                      
                   
-                      <div class="popup-btn">
+                      <div class="popup-btn text-left">
                         <a href="" class="btn btn-common bg-gradient-primary">Save</a>
                         <a href="" class="btn btn-common bg-gradient-primary">Cancel</a>
                       </div>
@@ -69,7 +77,7 @@
     </div>
 
 
-    <%- include('layout/footer'); -%>
+<%- include('layout/footer'); -%>
 <script src="https://cdn.ckeditor.com/4.13.1/standard/ckeditor.js"></script>
  <script>
         CKEDITOR.replace( 'editor1' );
