--- a/views/admin/frontadmin/add-new-member.ejs
+++ b/views/admin/frontadmin/add-new-member.ejs
@@ -8,7 +8,7 @@
         <div class="col-lg-6">
          <div class="text-right">
            <div>
-             <a href="our-team.ejs" class="btn btn-common bg-gradient-primary">Go Back</a>
+             <a href="/our-team" class="btn btn-common bg-gradient-primary">Go Back</a>
            </div>
          </div>
        </div>
