--- a/views/admin/frontadmin/blog-list.ejs
+++ b/views/admin/frontadmin/blog-list.ejs
@@ -8,7 +8,7 @@
         <div class="col-lg-6">
          <div class="text-right">
            <div>
-             <a href="add-new-blog.ejs" class="btn btn-common bg-gradient-primary">Add new Blog</a>
+             <a href="/add-new-blog" class="btn btn-common bg-gradient-primary">Add new Blog</a>
            </div>
          </div>
        </div>
