--- a/views/admin/frontadmin/layout/header.ejs
+++ b/views/admin/frontadmin/layout/header.ejs
@@ -33,7 +33,6 @@
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="mdi mdi-menu"></span>
-          </button>
           <div class="search-field d-none d-md-block">
             <form class="d-flex align-items-center h-100" action="#">
               <div class="input-group">
@@ -56,9 +55,9 @@
                 </div>
               </a>
               <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
-                <!-- <a class="dropdown-item" href="my-profile.ejs">
+                <!-- <a class="dropdown-item" href="/my-profie">
                   <i class="mdi mdi-account mr-2"></i> My Profile</a> -->
-                <a class="dropdown-item" href="change-password.ejs">
+                <a class="dropdown-item" href="/change-password">
                   <i class="mdi mdi-lock-reset mr-2"></i> Change Password</a>
                  
                 <a class="dropdown-item" href="#">
@@ -91,7 +90,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="main-dashboard.ejs">
+              <a class="nav-link" href="/main-dashboard">
                 <span class="menu-title">Dashboard</span>
                 <i class="mdi mdi-home menu-icon"></i>
               </a>
@@ -104,26 +103,26 @@
               </a>
               <div class="collapse" id="ui-basic">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="home-banner-details.ejs">Home Banner</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/home-banner-details">Home Banner</a></li>
                   
-                  <li class="nav-item"> <a class="nav-link" href="key-features.ejs">Key Features</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="problem.ejs">Problems</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="solution.ejs">Solutions</a></li>
-                   <li class="nav-item"> <a class="nav-link" href="token-allocation.ejs">Token Allocation</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/key-features">Key Features</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/problem">Problems</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/solution">Solutions</a></li>
+                   <li class="nav-item"> <a class="nav-link" href="/token-allocation">Token Allocation</a></li>
                     <!-- <li class="nav-item"> <a class="nav-link" href="partner-list.ejs">Partners</a></li> -->
 
-                  <li class="nav-item"> <a class="nav-link" href="roadmap.ejs">Roadmap</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/roadmap">Roadmap</a></li>
 
-                  <li class="nav-item"> <a class="nav-link" href="whitepaper.ejs">Whitepaper</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/whitepaper">Whitepaper</a></li>
 
-                  <li class="nav-item"> <a class="nav-link" href="our-team.ejs">Our Team</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/our-team">Our Team</a></li>
 
-                  <li class="nav-item"> <a class="nav-link" href="blog-list.ejs">Blogs</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/blog-list">Blogs</a></li>
 
                   
                  
                  <!--  <li class="nav-item"> <a class="nav-link" href="how-to-work.ejs">How It Work</a></li> -->
-                  <li class="nav-item"> <a class="nav-link" href="faq-list.ejs">FAQ</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/faq-list">FAQ</a></li>
 
                    
                   
@@ -140,10 +139,10 @@
               </a>
               <div class="collapse" id="ui-basic1">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="terms-n-conditons.ejs">Terms & Conditions</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="privacy-policy.ejs">Privacy Policy</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="cookie-policy.ejs">Cookie Policy</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="referral-policy.ejs">Referral policy</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/terms-n-conditons">Terms & Conditions</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/privacy-policy">Privacy Policy</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/cookie-policy">Cookie Policy</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/referral-policy">Referral policy</a></li>
                 </ul>
               </div>
             </li>
@@ -158,9 +157,9 @@
               </a>
               <div class="collapse" id="ui-basic1">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="contact-list.ejs">Contact Us</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="basic-details.ejs">Basic Details</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="feedback-list.ejs">Feedback List</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/contact-list">Contact Us</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/basic-details">Basic Details</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/feedback-list">Feedback List</a></li>
                 </ul>
               </div>
             </li>
@@ -173,8 +172,8 @@
               </a>
               <div class="collapse" id="ui-basic1">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="user-list.ejs">User List</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="order-history.ejs">Order History</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/user-list">User List</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/order-history">Order History</a></li>
                 </ul>
               </div>
             </li>
@@ -188,10 +187,10 @@
               </a>
               <div class="collapse" id="ui-basic1">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="referral-table.ejs">Referral</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="update-token.ejs">Update Tokenomics</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="summary.ejs">UWCT List</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="bonus-persent.ejs">Referral Bonus %</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/referral-table">Referral</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/update-token">Update Tokenomics</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/summary">UWCT List</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/bonus-persent">Referral Bonus %</a></li>
                 </ul>
               </div>
             </li>
@@ -199,7 +198,7 @@
 
 
              <li class="nav-item">
-              <a class="nav-link" href="transaction-table.ejs">
+              <a class="nav-link" href="/transaction-table">
                 <span class="menu-title">Transaction History</span>
                 <i class="mdi mdi-file menu-icon"></i>
               </a>
