--- a/views/admin/frontadmin/summary.ejs
+++ b/views/admin/frontadmin/summary.ejs
@@ -78,7 +78,7 @@
                  <td>$ 115.00</td>
                  <td>
                     <div class="edit-icons">
-                    <a href="art-list-details.ejs"><i class="mdi mdi-eye"></i></a>
+                    <a href="/art-list-details"><i class="mdi mdi-eye"></i></a>
                   </div>
                  </td>
               </tr>
@@ -96,7 +96,7 @@
                  <td>$ 115.00</td>
                  <td>
                     <div class="edit-icons">
-                    <a href="art-list-details.ejs"><i class="mdi mdi-eye"></i></a>
+                    <a href="/art-list-details"><i class="mdi mdi-eye"></i></a>
                   </div>
                  </td>
               </tr>
@@ -114,7 +114,7 @@
                  <td>$ 115.00</td>
                  <td>
                     <div class="edit-icons">
-                    <a href="art-list-details.ejs"><i class="mdi mdi-eye"></i></a>
+                    <a href="/art-list-details"><i class="mdi mdi-eye"></i></a>
                   </div>
                  </td>
               </tr>
