--- a/views/admin/frontadmin/upload-doc-list.ejs
+++ b/views/admin/frontadmin/upload-doc-list.ejs
@@ -8,7 +8,7 @@
          <div class="col-lg-6">
          <div class="text-right">
            <div>
-             <a href="add-new-document.ejs" class="btn btn-common bg-gradient-primary">Add New Document</a>
+             <a href="/add-new-document" class="btn btn-common bg-gradient-primary">Add New Document</a>
            </div>
          </div>
        </div>
@@ -36,7 +36,7 @@
                  <td>
                   <div class="edit-icons">
                    
-                    <a href="edit-document.ejs" data-toggle="tooltip" data-placement="top" title="Edit"><i class="mdi mdi-pencil"></i></a>
+                    <a href="/edit-document" data-toggle="tooltip" data-placement="top" title="Edit"><i class="mdi mdi-pencil"></i></a>
                     <a href="" data-toggle="tooltip" data-placement="top" title="Delete"><i class="mdi mdi-close"></i></a>
                   </div>
                 </td>
@@ -49,7 +49,7 @@
                  <td>
                   <div class="edit-icons">
                    
-                    <a href="edit-document.ejs" data-toggle="tooltip" data-placement="top" title="Edit"><i class="mdi mdi-pencil"></i></a>
+                    <a href="/edit-document" data-toggle="tooltip" data-placement="top" title="Edit"><i class="mdi mdi-pencil"></i></a>
                     <a href="" data-toggle="tooltip" data-placement="top" title="Delete"><i class="mdi mdi-close"></i></a>
                   </div>
                 </td>
