--- a/views/admin/frontadmin/user-list.ejs
+++ b/views/admin/frontadmin/user-list.ejs
@@ -87,7 +87,7 @@
                  <td>
                   <div class="edit-icons">
                    
-                    <a href="transaction-table.ejs"><i class="mdi mdi-eye"></i></a>
+                    <a href="/transaction-table"><i class="mdi mdi-eye"></i></a>
                   </div>
                 </td>
               </tr>
