--- a/views/admin/frontadmin/about-us.ejs
+++ b/views/admin/frontadmin/about-us.ejs
@@ -3,12 +3,12 @@
   <div class="heading-row mb-20">
     <div class="row align-item-center">
        <div class="col-lg-6">
-          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-home"></i></span> Basic Details </h3>
+          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-home"></i></span> About Us </h3>
        </div>
         <div class="col-lg-6">
          <div class="text-right">
            <div>
-             <a href="main-dashboard.ejs" class="btn btn-common bg-gradient-primary">Go Back</a>
+             <a href="/main-dashboard" class="btn btn-common bg-gradient-primary">Go Back</a>
            </div>
          </div>
        </div>
@@ -23,53 +23,19 @@
                  <div>
                    <div class="profile-form mt-20">
                       <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-8">
                             <div class="row">
-                              <div class="col-md-4">
+                              <div class="col-md-12">
                                  <div class="form-group">
-                                    <label>Company Address</label>
+                                    <label>Tittle</label>
                                     <input type="text" class="form-control">
                                   </div>
                               </div>
-                              <div class="col-md-4">
+                            </div>
+                             <div class="row">
+                              <div class="col-md-12">
                                  <div class="form-group">
-                                    <label>Phone Number</label>
-                                    <input type="text" class="form-control">
-                                  </div>
-                              </div>
-                              <div class="col-md-4">
-                                 <div class="form-group">
-                                    <label>Email Address</label>
-                                    <input type="email" class="form-control">
-                                  </div>
-                              </div>
-                              <div class="col-md-4">
-                                 <div class="form-group">
-                                    <label>Update Social media links</label>
-                                    <input type="text" class="form-control">
-                                  </div>
-                              </div>
-                              <div class="col-md-4">
-                                 <div class="form-group">
-                                    <label>App links</label>
-                                    <input type="text" class="form-control">
-                                  </div>
-                              </div>
-                              <div class="col-md-4">
-                                 <div class="form-group">
-                                    <label>Footnote of copyrights</label>
-                                    <input type="text" class="form-control">
-                                  </div>
-                              </div>
-                              <div class="col-md-4">
-                                 <div class="form-group">
-                                    <label>Company Address</label>
-                                    <input type="text" class="form-control">
-                                  </div>
-                              </div>
-                               <div class="col-md-4">
-                                 <div class="form-group">
-                                  <label>Upload Logo</label>
+                                  <label>File upload(Image Size : 700*600)</label>
                                   <input type="file" name="img[]" class="file-upload-default">
                                   <div class="input-group col-xs-12">
                                     <input type="text" class="form-control file-upload-info" disabled="" placeholder="Upload Image">
@@ -79,17 +45,21 @@
                                   </div>
                                 </div>
                               </div>
-                               <div class="col-md-4">
-                                 <div class="form-group">
-                                    <label>Heading Text</label>
-                                    <input type="text" class="form-control">
+                            </div>                           
+                            <div class="row">
+                              <div class="col-md-12">
+                                  <div class="form-group">
+                                    <label>Content</label>
+                                    <textarea class="form-control" name="editor1"></textarea>
                                   </div>
                               </div>
-
                             </div>
                             
+                              
                         </div>
-                       
+                        <div class="col-md-4">
+                         
+                        </div>
                       </div>
                     
                       
