--- a/views/admin/frontadmin/add-new-milestone.ejs
+++ b/views/admin/frontadmin/add-new-milestone.ejs
@@ -3,12 +3,12 @@
   <div class="heading-row mb-20">
     <div class="row align-item-center">
        <div class="col-lg-6">
-          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-comment-question-outline"></i></span> Add New Question </h3>
+          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-account-multiple"></i></span> Add New Milestone </h3>
        </div>
         <div class="col-lg-6">
          <div class="text-right">
            <div>
-             <a href="faq-list.ejs" class="btn btn-common bg-gradient-primary">Go Back</a>
+             <a href="/roadmap" class="btn btn-common bg-gradient-primary">Go Back</a>
            </div>
          </div>
        </div>
@@ -27,10 +27,11 @@
                             <div class="row">
                               <div class="col-md-6">
                                  <div class="form-group">
-                                    <label>FAQ Question</label>
+                                    <label>Duration</label>
                                     <input type="text" class="form-control">
                                   </div>
                               </div>
+                                
                               <div class="col-md-6">
                                 <div class="form-group">
                                   <label>Status</label>
@@ -41,30 +42,27 @@
                                     </select>
                                    </div>
                                 </div>
-                              </div>
-                            </div>
-                            <div class="row">
+                              </div>                           
+                            </div>  
+                             <div class="row">
                               <div class="col-md-12">
                                   <div class="form-group">
-                                    <label>FAQ Answer</label>
+                                    <label>Content</label>
                                     <textarea class="form-control" name="editor1"></textarea>
                                   </div>
                               </div>
-                            </div>
-                             <div class="popup-btn text-center">
-                              <a href="" class="btn btn-common bg-gradient-primary">Save</a>
-                              <a href="" class="btn btn-common bg-gradient-primary">Cancel</a>
-                            </div>
-                              
+                            </div>                            
                         </div>
-                       
                       </div>
                     
                       
                      
                      
                   
-                     
+                      <div class="popup-btn text-left">
+                        <a href="" class="btn btn-common bg-gradient-primary">Save</a>
+                        <a href="" class="btn btn-common bg-gradient-primary">Cancel</a>
+                      </div>
                       
                
 
@@ -78,7 +76,7 @@
     </div>
 
 
-    <%- include('layout/footer'); -%>
+<%- include('layout/footer'); -%>
 <script src="https://cdn.ckeditor.com/4.13.1/standard/ckeditor.js"></script>
  <script>
         CKEDITOR.replace( 'editor1' );
