--- a/views/admin/frontadmin/site-info.ejs
+++ b/views/admin/frontadmin/site-info.ejs
@@ -1,14 +1,15 @@
 <%- include('layout/header'); -%>
 
+
   <div class="heading-row mb-20">
     <div class="row align-item-center">
        <div class="col-lg-6">
-          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-home"></i></span> About Key Features </h3>
+          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-home"></i></span> Get In Touch Info </h3>
        </div>
         <div class="col-lg-6">
          <div class="text-right">
            <div>
-             <a href="key-features.ejs" class="btn btn-common bg-gradient-primary">Go Back</a>
+             <a href="/main-dashboard" class="btn btn-common bg-gradient-primary">Go Back</a>
            </div>
          </div>
        </div>
@@ -23,55 +24,27 @@
                  <div>
                    <div class="profile-form mt-20">
                       <div class="row">
-                       
                         <div class="col-md-8">
                             <div class="row">
-                             
                               <div class="col-md-12">
                                  <div class="form-group">
-                                    <label>Tittle</label>
-                                    <input type="text" class="form-control">
+                                    <label>Support Email</label>
+                                    <input type="text" class="form-control" value="support@rowanenergy.com">
                                   </div>
                               </div>
-                            
                               <div class="col-md-12">
-                                <div class="form-group">
-                                  <label>Status</label>
-                                   <div class="box">
-                                     <select class="form-control">
-                                      <option>Active</option>
-                                      <option>Inactive</option>
-                                    </select>
-                                   </div>
-                                </div>
-                              </div>
-                            </div>
-                             <div class="row">
-                              <div class="col-md-12">
-                                  <div class="form-group">
-                                    <label>Content</label>
-                                    <textarea class="form-control" name="editor1"></textarea>
+                                 <div class="form-group">
+                                    <label>Phone Number</label>
+                                    <input type="text" class="form-control" value="+44 1223 92 6386">
                                   </div>
                               </div>
-                            </div>
-                           
-                            
-                              
+                            </div>  
                         </div>
-                      
                       </div>
-                    
-                      
-                     
-                     
-                  
-                      <div class="popup-btn text-left">
+                      <div class="popup-btn">
                         <a href="" class="btn btn-common bg-gradient-primary">Save</a>
                         <a href="" class="btn btn-common bg-gradient-primary">Cancel</a>
                       </div>
-                      
-               
-
                    </div>
                  </div>
                </div>
@@ -81,8 +54,7 @@
       </div>
     </div>
 
-
-<%- include('layout/footer'); -%>
+    <%- include('layout/footer'); -%>
 <script src="https://cdn.ckeditor.com/4.13.1/standard/ckeditor.js"></script>
  <script>
         CKEDITOR.replace( 'editor1' );
