--- a/views/admin/frontadmin/solution.ejs
+++ b/views/admin/frontadmin/solution.ejs
@@ -1,14 +1,15 @@
 <%- include('layout/header'); -%>
 
+
   <div class="heading-row mb-20">
     <div class="row align-item-center">
        <div class="col-lg-6">
-          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-file-document"></i></span> Add New Document </h3>
+          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-home"></i></span> Solution </h3>
        </div>
         <div class="col-lg-6">
          <div class="text-right">
            <div>
-             <a href="upload-doc-list.ejs" class="btn btn-common bg-gradient-primary">Go Back</a>
+             <a href="/main-dashboard" class="btn btn-common bg-gradient-primary">Go Back</a>
            </div>
          </div>
        </div>
@@ -23,44 +24,50 @@
                  <div>
                    <div class="profile-form mt-20">
                       <div class="row">
-                       
                         <div class="col-md-8">
                             <div class="row">
-                            
                               <div class="col-md-12">
                                  <div class="form-group">
-                                    <label>Document Name</label>
+                                    <label>Tittle</label>
                                     <input type="text" class="form-control">
                                   </div>
                               </div>
-
-                               <div class="col-md-12">
+                            </div>
+                             <div class="row">
+                              <div class="col-md-12">
                                  <div class="form-group">
-                                  <label>File upload</label>
+                                  <label>Image</label>
                                   <input type="file" name="img[]" class="file-upload-default">
                                   <div class="input-group col-xs-12">
-                                    <input type="text" class="form-control file-upload-info" disabled="" placeholder="Upload Image"
-                                    >
+                                    <input type="text" class="form-control file-upload-info" disabled="" placeholder="Upload Image">
                                     <span class="input-group-append">
                                       <button class="file-upload-browse btn btn-gradient-primary" type="button">Upload</button>
                                     </span>
                                   </div>
                                 </div>
                               </div>
-
+                            </div>                           
+                            <div class="row">
+                              <div class="col-md-12">
+                                  <div class="form-group">
+                                    <label>Content</label>
+                                    <textarea class="form-control" name="editor1"></textarea>
+                                  </div>
+                              </div>
                             </div>
-                           
                             
                               
                         </div>
-                       
+                        <div class="col-md-4">
+                         
+                        </div>
                       </div>
                     
                       
                      
                      
                   
-                      <div class="popup-btn text-left">
+                      <div class="popup-btn">
                         <a href="" class="btn btn-common bg-gradient-primary">Save</a>
                         <a href="" class="btn btn-common bg-gradient-primary">Cancel</a>
                       </div>
@@ -77,7 +84,7 @@
     </div>
 
 
-<%- include('layout/footer'); -%>
+    <%- include('layout/footer'); -%>
 <script src="https://cdn.ckeditor.com/4.13.1/standard/ckeditor.js"></script>
  <script>
         CKEDITOR.replace( 'editor1' );
