--- a/views/admin/frontadmin/terms-n-conditons.ejs
+++ b/views/admin/frontadmin/terms-n-conditons.ejs
@@ -1,15 +1,14 @@
 <%- include('layout/header'); -%>
 
-
   <div class="heading-row mb-20">
     <div class="row align-item-center">
        <div class="col-lg-6">
-          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-home"></i></span> Solution </h3>
+          <h3 class="page-title"><span class="page-title-icon bg-gradient-primary text-white mr-2"><i class="mdi mdi-home"></i></span> Terms & Conditions </h3>
        </div>
         <div class="col-lg-6">
          <div class="text-right">
            <div>
-             <a href="main-dashboard.ejs" class="btn btn-common bg-gradient-primary">Go Back</a>
+             <a href="/main-dashboard" class="btn btn-common bg-gradient-primary">Go Back</a>
            </div>
          </div>
        </div>
@@ -33,20 +32,6 @@
                                   </div>
                               </div>
                             </div>
-                             <div class="row">
-                              <div class="col-md-12">
-                                 <div class="form-group">
-                                  <label>Image</label>
-                                  <input type="file" name="img[]" class="file-upload-default">
-                                  <div class="input-group col-xs-12">
-                                    <input type="text" class="form-control file-upload-info" disabled="" placeholder="Upload Image">
-                                    <span class="input-group-append">
-                                      <button class="file-upload-browse btn btn-gradient-primary" type="button">Upload</button>
-                                    </span>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>                           
                             <div class="row">
                               <div class="col-md-12">
                                   <div class="form-group">
