admin pannel bugs

--- a/views/admin/front-admin/header.ejs
+++ b/views/admin/front-admin/header.ejs
@@ -33,6 +33,7 @@
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="mdi mdi-menu"></span>
+            </button>
           <div class="search-field d-none d-md-block">
             <form class="d-flex align-items-center h-100" action="#">
               <div class="input-group">
@@ -187,9 +188,9 @@
               </a>
               <div class="collapse" id="ui-basic1">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="/referral-table">Referral</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/admin-referral-table">Referral</a></li>
                   <li class="nav-item"> <a class="nav-link" href="/update-token">Update Tokenomics</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="/summary">UWCT List</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="/summary">$EBT List</a></li>
                   <li class="nav-item"> <a class="nav-link" href="/bonus-persent">Referral Bonus %</a></li>
                 </ul>
               </div>
