--- a/views/main_dashboard.ejs
+++ b/views/main_dashboard.ejs
@@ -1,4 +1,5 @@
-<%- include('header') -%>
+<%- include('header') %>
+
 
   <div class="page-header">
       <h3 class="page-title">
@@ -11,11 +12,11 @@
                  <a href="">
                    <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
-                    <img src="/admin_assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
+                    <img src="/assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Total $EBT Sold 
                     </h4>
-                    <img src="/admin_assets/images/buy-coin.png" class="img-fluid icon-img">
-                    <h2 class="mb-5"><%=ebtSold%></h2>
+                    <img src="/assets/images/buy-coin.png" class="img-fluid icon-img">
+                    <h2 class="mb-5">$ 15,0000</h2>
                   </div>
                 </div>
                  </a>
@@ -24,10 +25,10 @@
                  <a href="">
                    <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
-                    <img src="/admin_assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
+                    <img src="/assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">$EBT sold this month 
                     </h4>
-                    <img src="/admin_assets/images/buy-coin.png" class="img-fluid icon-img">
+                    <img src="/assets/images/buy-coin.png" class="img-fluid icon-img">
 
                     <h2 class="mb-5">$ 15,0000</h2>
                   </div>
@@ -38,14 +39,11 @@
                 <a href="">
                   <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
-                    <img src="/admin_assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
+                    <img src="/assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">$EBT Balance with Admin 
                     </h4>
-                    <img src="/admin_assets/images/buy-coin.png" class="img-fluid icon-img">
-                    <h2 class="mb-5"><% if(EBT_balance !='' && EBT_balance !=null && EBT_balance !=undefined){ %>
-                      <%- EBT_balance %>
-                        <% }else{ %>0
-                          <% } %></h2>
+                    <img src="/assets/images/buy-coin.png" class="img-fluid icon-img">
+                    <h2 class="mb-5">$ 95,5741</h2>
                   </div>
                 </div>
                 </a>
@@ -54,14 +52,11 @@
                  <a href="">
                     <div class="card bg-gradient-danger card-img-holder text-white">
                     <div class="card-body">
-                      <img src="/admin_assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
+                      <img src="/assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
                       <h4 class="font-weight-normal mb-3">Total Users Registered
                       </h4>
-                      <img src="/admin_assets/images/buy-coin.png" class="img-fluid icon-img">
-                      <h2 class="mb-5">   <% if(total_users_s !='' && total_users_s !=null && total_users_s !=undefined){ %>
-                        <%= total_users_s %>
-                          <% }else{ %>0
-                            <% } %></h2>
+                      <img src="/assets/images/buy-coin.png" class="img-fluid icon-img">
+                      <h2 class="mb-5">$ 15,0000</h2>
                     </div>
                   </div>
                  </a>
@@ -70,11 +65,11 @@
                 <a href="">
                   <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
-                    <img src="/admin_assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
+                    <img src="/assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Users registered this month 
                     </h4>
-                    <img src="/admin_assets/images/buy-coin.png" class="img-fluid icon-img">
-                    <h2 class="mb-5"><%=usersRegisteredThisMonth%></h2>
+                    <img src="/assets/images/buy-coin.png" class="img-fluid icon-img">
+                    <h2 class="mb-5">$ 45,6334</h2>
                   </div>
                 </div>
                 </a>
@@ -83,11 +78,11 @@
                  <a href="">
                     <div class="card bg-gradient-danger card-img-holder text-white">
                       <div class="card-body">
-                        <img src="/admin_assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
+                        <img src="/assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
                         <h4 class="font-weight-normal mb-3">Total $EBT Rewards Distributed
                         </h4>
-                        <img src="/admin_assets/images/buy-coin.png" class="img-fluid icon-img">
-                        <h2 class="mb-5"> <%=totalArtwRewardsDestributed%></h2>
+                        <img src="/assets/images/buy-coin.png" class="img-fluid icon-img">
+                        <h2 class="mb-5">$ 45,6334</h2>
                       </div>
                     </div>
                  </a>
@@ -95,14 +90,14 @@
              <!--  <div class="col-md-2 stretch-card grid-margin">
                 <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
-                    <img src="admin_assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
+                    <img src="/assets/images/other/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3"> Total $EBT Rewards Distributed
                     </h4>
-                    <img src="admin_assets/images/meta-icon.png" class="img-fluid icon-img" data-toggle="tooltip" data-placement="top" title="Metamask">
-                    <img src="admin_assets/images/bnb-icon.png" class="img-fluid icon-img" data-toggle="tooltip" data-placement="top" title="BSC Wallet">
+                    <img src="/assets/images/meta-icon.png" class="img-fluid icon-img" data-toggle="tooltip" data-placement="top" title="Metamask">
+                    <img src="/assets/images/bnb-icon.png" class="img-fluid icon-img" data-toggle="tooltip" data-placement="top" title="BSC Wallet">
 
                    
-                    <img src="admin_assets/images/trust-icon.png" class="img-fluid icon-img" data-toggle="tooltip" data-placement="top" title="Trust Wallet">
+                    <img src="/assets/images/trust-icon.png" class="img-fluid icon-img" data-toggle="tooltip" data-placement="top" title="Trust Wallet">
                     
                   </div>
                 </div>
