--- a/views/admin/front-admin/admin-transaction-table.ejs
+++ b/views/admin/front-admin/admin-transaction-table.ejs
@@ -65,7 +65,7 @@
                   <th width="15%" class="border-top-0">Sender Address</th>
                   <th width="15%" class="border-top-0">Receiver Address</th>
                   <th width="10%" class="border-top-0">Status</th>
-                  <th width="10%" class="border-top-0">Total UWCT</th>
+                  <th width="10%" class="border-top-0">Total $EBT</th>
                   <th width="12%" class="border-top-0">Created At</th> 
                    <th width="5%" class="border-top-0">Action</th>    
                   </tr>
