--- a/views/admin/front-admin/update-token.ejs
+++ b/views/admin/front-admin/update-token.ejs
@@ -27,7 +27,7 @@
                             <div class="row">
                                <div class="col-md-6">
                                  <div class="form-group">
-                                    <label>1 UWCT</label>
+                                    <label>1 $EBT</label>
                                     <input type="text" class="form-control">
                                   </div>
                               </div>
