--- a/views/admin/front-admin/main-dashboard.ejs
+++ b/views/admin/front-admin/main-dashboard.ejs
@@ -150,7 +150,7 @@
 
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
-          ['Year', 'UWCT Sold', 'UWCT Left', 'Users Registered' ],
+          ['Year', '$EBT Sold', '$EBT Left', 'Users Registered' ],
           ['2004',  1000,      400, 300],
           ['2005',  1170,      460, 1400],
           ['2006',  660,       1120, 500],
