--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -156,8 +156,8 @@
                                                <h6 class="hbg my-2 text-left">The $EBT guide</h6>
                                                <ul class="text-left four-step-list">
                                                   <li>This is your universal wallet. Please do remember your private key. In case it is lost, we will not be able to retrieve it and your funds would be locked forever.</li>
-                                                  <li>$EBT coins are internal currency to our Utopia network where you can contribute.</li>
-                                                  <li>The goal of the Utopia Community is to establish a globally represented  community, that supports diverse projects and helps each other. </li>
+                                                  <li>$EBT coins are internal currency to our EBT Network where you can contribute.</li>
+                                                  <li>The goal of the EBT Community is to establish a globally represented  community, that supports diverse projects and helps each other. </li>
                                                   <li>
                                                     One big aspect is the acquisition of land worldwide, either to protect the environment or to create areas where everyone in the Community can live free of charge or take holidays, in accordance with the laws of the respective countries. Thus, we also want to promote alternative lifestyles.
                                                     Check out our marketplace now! <a href="">The $EBT</a></li>
