--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -139,8 +139,8 @@
                         </div>
                        
                         <div class="text-center mlti-btn mt-4">
-                              <!-- <a href="/send-uwct" class="btn btn-common light-green">Send</a> -->
-                              <!-- <a href="/send-uwct" class="btn btn-common light-green" >Send</a> -->
+                              <!-- <a href="/send-EBT" class="btn btn-common light-green">Send</a> -->
+                              <!-- <a href="/send-EBT" class="btn btn-common light-green" >Send</a> -->
                               <a href="/buy-coin" class="btn btn-common light-green">Buy</a>
                               <a href="/receive-artw?walletid=<%-wallet_details._id %>" class="btn btn-common light-green">Receive</a>
                           </div>
