--- a/views/index.ejs
+++ b/views/index.ejs
@@ -585,7 +585,12 @@
                        <div class="input-group">
                           <input type="text" class="form-control" placeholder="Your Email">
                           <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button">Subscribe</button>
+                            <button class="btn btn-outline-secondary" type="button" >
+                                <a class="nav-link sign-up-btn" href="signup">
+                                    Subscribe
+                                    </a>
+                                                          
+                            </button>
                           </div>
                         </div>
                 </div>
